# braz_car

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  render.yaml  requirements.txt  vite.config.mjs
braz_car/: apps.py  context_processors.py  urls.py
braz_car/templates/: base.html  card.html  index.html
braz_car/templates/components/: header.html  logo.html  mobile_menu.html  nav_items.html  offer_ride_button.html  ride_card.html  search_bar.html  user_menu.html
core/: asgi.py  settings.py  urls.py
core/settings/: __init__.py  base.py  dev.py  testing.py
frontend/: eslint.config.js  tsconfig.json
frontend/src/: main.tsx
k8s/: configmap.yaml  deployment.yaml  secret.example.yaml  service.yaml
locations/: admin.py  models.py  urls.py
locations/migrations/: 0001_initial.py
rides/: admin.py  models.py  tests.py  urls.py
rides/migrations/: 0001_initial.py  0002_initial.py  0003_ride_listing_record.py
scripts/: entrypoint.sh
static/: main.js
static/css/: main.css
static/js/: important.js  main.js
templates/: app_shell.html
tests/application/: test_get_ride_listing_detail.py  test_list_ride_listings.py
tests/bootstrap/: test_config.py
tests/domain/: test_ride_listing.py
users/: backends.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: login.html  register.html
utils/validations/: cpf.py
vehicles/: models.py  urls.py
vehicles/migrations/: 0001_initial.py
(+37 files in other folders)
